# 3dlifegame

./: .clang-format  .gitignore  CMakeLists.txt  NOTE.md  README.md  TODO.md  vcpkg.json
assets/models/: arrow.mtl  arrow.obj_test  cube.obj_test
src/: init.h  legacy_functions.cpp  main.cpp
src/animation/: Animation.hpp  AnimationManager.hpp
src/camera/: Camera.hpp  camera.hpp
src/debug/: Error.hpp
src/fonts/: BmpLoader.hpp  Font.hpp
src/geometry/: Icosahedron.hpp  Sphere.hpp
src/glsl/: CubeShader.fs  FontShader.vs  LightingShader.fs  MagicCubeShader.fs  MagicCubeShader.vs  SkyboxShader.fs  SkyboxShader.vs
src/group/: Gizmo.hpp  Group.hpp
src/light/: DirLight.hpp  Light.cpp  Light.hpp  LightManager.hpp  PointLight.hpp  SpotLight.hpp
src/logic/: GameOfLife.hpp  MagicCube.hpp
src/model/: Cube.hpp  CubeEBO.hpp  Material.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  shapes.h
src/raster/: aabb.hpp  bmp.hpp  bvh_node.hpp  camera.hpp  hitable.hpp  hitable_list.hpp  material.hpp  perlin.hpp  ray.hpp  scene.hpp  sphere.hpp  texture.hpp  utils.hpp  vec3.hpp  xy_rect.hpp
src/scene/: DemoScene.cpp  DemoScene.hpp  MagicCubeScene.cpp  MagicCubeScene.hpp  Scene.hpp  SceneManager.hpp
src/shaders/: CubeShader.fs  CubeShader.vs  FontShader.vs  GizmoShader.fs  GizmoShader.vs  LightingShader.fs  LightingShader.vs  Shader.cpp  Shader.hpp  shader.cpp  shader.fs  shader.h  shader.hpp  shader.vs
src/skybox/: Skybox.hpp
src/tests/: TestCube.cpp  TestFont.cpp  TestFunc.cpp  TestImGui.cpp  TestLogic.cpp  TestNode.cpp  TestRaster.cpp  testLogic.cpp
src/texture/: TextureLoader.hpp  load_texture.h
src/ui/: CursorInput.hpp  KeyboardInput.hpp  MouseInput.hpp  Window.hpp  keyboardInput.hpp  mouseInput.hpp
src/utils/: Node.hpp  Type.hpp
